syntax = "proto3";


option java_outer_classname = "Ack";

message AckMsg {
    int32 version = 1;
    //协议版本号。第一版本：1，以此类推。

    int64 id = 2;
    //消息id

    Module fromModule = 3;
    //发送者模块

    string fromUser = 4;
    //发送者userId

    string destUser = 5;
    //接收者userId

    int64 createTime = 6;
    //发送时间

    MsgType msgType = 7;
    //消息类型

    int64 ackMsgId = 8;
    //消息体

    enum Module {
        SERVER = 0;
        TRANSFER = 1;
        CLIENT = 2;
    }

    enum MsgType {
        DELIVERED = 0;
        READ = 1;
        FRIENDAGREE = 2;
        FRIENDDELETE = 3;
    }
}
