syntax = "proto3";


option java_outer_classname = "Check";

message CheckMsg {
  int32 version = 1;
  //协议版本号。第一版本：1，以此类推。

  string fromUser = 2;
  //消息id

  MsgType msgType = 3;

  int64 createTime = 4;
  //发送时间


  enum MsgType {
    PING = 0;
    PONG = 1;
  }

}