syntax = "proto3";


option java_outer_classname = "Internal";

message InternalMsg {
    int32 version = 1;
    //协议版本号。第一版本：1，以此类推。

    int64 id = 2;
    //消息id

    Module from = 3;
    //发送模块

    Module dest = 4;
    //接收模块

    int64 createTime = 5;
    //发送时间

    MsgType msgType = 6;
    //消息类型

    string fromUser = 7;

    string destUser = 8;

    enum Module {
        SERVER = 0;
        TRANSFER = 1;
        CLIENT = 2;
    }

    enum MsgType {
        GREET = 0;
        ACK = 1;
        ERROR = 2;
        FRIENDReq = 3;
    }
}
